--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,25 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>listing</title>
-</head>
+<% layout("/layouts/boilerplate") %>
 <body>
-<h2>Edit Your listing</h2>
+<div class="row  mt-3">
+    <div class="col-8 offset-2">
+    <h2>Edit Your listing</h2>
     <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
-        <input name="listing[title]"  type="text" value="<%= listing.title %>"/>
-        <br>  <br>
-        <textarea name="listing[description]"><%= listing.description %></textarea>
-         <br> <br>
-        <input name="listing[price]" type="number" value="<%= listing.price %>"/>
-         <br> <br>
-        <input name="listing[location]" type="text" value="<%= listing.location %>"/>
-         <br> <br>
-        <input name="listing[country]" type="text" value="<%= listing.country %>"/>
-         <br> <br>
-         <button>Add</button>
-
+        <div class="mb-2">
+            <label for="title" class="form-label">Title</label>
+            <input name="listing[title]"  type="text" value="<%= listing.title %>" class="form-control"/>
+        </div>
+        <div class="mb-2">
+            <label for="description" class="form-label">Description</label>
+            <textarea name="listing[description]" class="form-control"><%= listing.description %></textarea>
+        </div>
+        <div class="row">
+            <div class="mb-2 col-md-4">
+            <label for="price" class="form-label">Price</label>
+            <input name="listing[price]" type="number" value="<%= listing.price %>" class="form-control"/>
+        </div>
+        <div class="mb-2 col-md-8">
+           <label for="country" class="form-label">Country</label> 
+           <input name="listing[country]" type="text" value="<%= listing.country %>" class="form-control"/>
+        </div>
+        </div>
+        
+        <div class="mb-2">
+            <label for="location" class="form-label">Location</label>
+            <input name="listing[location]" type="text" value="<%= listing.location %>" class="form-control"/>
+        </div>
+        
+         <button class="btn btn-dark edit-btn mt-3 mb-3">Edit</button>
     </form>
+    </div>
+</div>
 </body>
-</html>
