--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,7 +5,7 @@
         <button>Create a New Listing</button>
     </form> -->
 
-    <div class="row row cols-lg-3 row-cols-md-2 row-cols-sm-1">
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
     <% for(listing of allListings) {%>
   <a href="/listings/<%= listing._id %>" class="listing-link">
     <div class="card " >
