--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,8 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <div class="row">
+    <div class="row mt-3">
         <div class="col-8 offset-2">
-            <br> <br>
     <h2>Create a new listing</h2>
 
     <form method="POST" action="/listings">
@@ -33,9 +32,7 @@
             <input name="listing[location]" type="text" placeholder="Mumbai,Maharashtra" class="form-control"/>
         </div>
         
-         <br> <br>
-         <button class="btn btn-dark add-btn">Add</button>
-         <br> <br>
+         <button class="btn btn-dark add-btn mt-3 mb-3">Add</button>
     </form>
     </div>
     </div>
