--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,17 +1,19 @@
-<% layout("/layouts/boilerplate") %>
+<% layout("layouts/boilerplate") %>
 <body>
     <div class="row mt-3">
         <div class="col-8 offset-2">
     <h2>Create a new listing</h2>
 
-    <form method="POST" action="/listings">
+    <form method="POST" action="/listings" novalidate class="needs-validation">
         <div class="mb-2">
             <label for="title" class="form-label">Title</label>
-            <input name="listing[title]"  type="text" placeholder="Enter title" class="form-control"/>
+            <input name="listing[title]"  type="text" placeholder="Enter title" class="form-control" required/>
+            <div class="valid-feedback">Title Looks good!</div>
         </div>
         <div class="mb-2">
             <label for="description" class="form-label">Description</label>
-            <textarea name="listing[description]" placeholder="Enter description" class="form-control"></textarea>
+            <textarea name="listing[description]" placeholder="Enter description" class="form-control" required></textarea>
+            <div class="invalid-feedback">Please enter a short description</div>
         </div>
         <div class="mb-2">
             <label for="image" class="form-label">Image</label>
@@ -20,16 +22,19 @@
         <div class="row">
         <div class="mb-2 col-md-4">
             <label for="price" class="form-label">Price</label>
-            <input name="listing[price]" type="number" placeholder="Enter price" class="form-control"/>
+            <input name="listing[price]"  placeholder="Enter price" class="form-control"required/>
+            <div class="invalid-feedback">Price should be valid</div>
         </div>
         <div class="mb-2 col-md-8">
             <label for="country" class="form-label">Country</label>
-            <input name="listing[country]" type="text" placeholder="India" class="form-control"/>
+            <input name="listing[country]" type="text" placeholder="India" class="form-control" required/>
+            <div class="invalid-feedback">Country name should be valid</div>
         </div>
         </div>
         <div class="mb-2">
             <label for="location" class="form-label">location</label>
-            <input name="listing[location]" type="text" placeholder="Mumbai,Maharashtra" class="form-control"/>
+            <input name="listing[location]" type="text" placeholder="Mumbai,Maharashtra" class="form-control" required/>
+            <div class="invalid-feedback">Location should be valid</div>
         </div>
         
          <button class="btn btn-dark add-btn mt-3 mb-3">Add</button>
