--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,31 +1,41 @@
-<% layout("/layouts/boilerplate") %>
+<% layout("layouts/boilerplate") %>
 <body>
 <div class="row  mt-3">
     <div class="col-8 offset-2">
     <h2>Edit Your listing</h2>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
         <div class="mb-2">
             <label for="title" class="form-label">Title</label>
-            <input name="listing[title]"  type="text" value="<%= listing.title %>" class="form-control"/>
+            <input name="listing[title]"  type="text" value="<%= listing.title %>" class="form-control" required/>
+            <div class="valid-feedback">Title Looks good!</div>
         </div>
         <div class="mb-2">
             <label for="description" class="form-label">Description</label>
-            <textarea name="listing[description]" class="form-control"><%= listing.description %></textarea>
+            <textarea name="listing[description]" class="form-control" required><%= listing.description %></textarea>
+            <div class="invalid-feedback">Please enter a short description</div>
+        </div>
+         <div class="mb-2">
+            <label for="image" class="form-label">Image</label>
+            <textarea name="listing[image]" class="form-control" required><%= listing.image %></textarea>
+            <div class="invalid-feedback">Please enter a valid link for image</div>
         </div>
         <div class="row">
             <div class="mb-2 col-md-4">
             <label for="price" class="form-label">Price</label>
-            <input name="listing[price]" type="number" value="<%= listing.price %>" class="form-control"/>
+            <input name="listing[price]" type="number" value="<%= listing.price %>" class="form-control" required/>
+            <div class="invalid-feedback">Price should be valid</div>
         </div>
         <div class="mb-2 col-md-8">
            <label for="country" class="form-label">Country</label> 
-           <input name="listing[country]" type="text" value="<%= listing.country %>" class="form-control"/>
+           <input name="listing[country]" type="text" value="<%= listing.country %>" class="form-control" required/>
+            <div class="invalid-feedback">Country name should be valid</div>
         </div>
         </div>
         
         <div class="mb-2">
             <label for="location" class="form-label">Location</label>
-            <input name="listing[location]" type="text" value="<%= listing.location %>" class="form-control"/>
+            <input name="listing[location]" type="text" value="<%= listing.location %>" class="form-control" required/>
+            <div class="invalid-feedback">Location should be valid</div>
         </div>
         
          <button class="btn btn-dark edit-btn mt-3 mb-3">Edit</button>
