--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerplate") %>
+<% layout("layouts/boilerplate") %>
 <body>
     <div class="mb-5">
     <div class="row mt-3">
@@ -12,7 +12,7 @@
             <p class="card-text">
                 <b><%= listing.title %></b> <br>
                 <%= listing.description %> <br>
-                &#8377;<%= listing.price.toLocaleString("en-IN") %> <br>
+                &#8377;<%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %>/night <br>
                 <%= listing.location %> <br>
                 <%= listing.country%> <br>
             </p>
@@ -36,13 +36,3 @@
 
 
 
-
-<!-- 
-<ul>
-        <li><%= listing.title %></li>
-        <li><%= listing.description %></li>
-        <li>&#8377;<%= listing.price.toLocaleString("en-IN") %></li>
-        <li><%= listing.location %></li>
-        <li><%= listing.country%></li>
-
-    </ul> -->
