--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,7 +10,15 @@
         <a class="nav-link "  href="/">Home</a>
         <a class="nav-link" href="/listings">All Listings</a>
         <a class="nav-link" href="/listings/new">Add new listings</a>
-        <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
+      </div>
+      <div class="navbar-nav ms-auto">
+        <% if(!currUser){ %>
+        <a class="nav-link "  href="/signup">signup</a>
+        <a class="nav-link" href="/login">login</a>
+        <% } %>
+        <% if(currUser) { %>
+        <a class="nav-link" href="/logout">logout</a>
+        <% } %>
       </div>
     </div>
   </div>
